--- a/app/src/main/res/layout/three_selector.xml
+++ b/app/src/main/res/layout/three_selector.xml
@@ -3,12 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:flexWrap="wrap">
+    app:flexWrap="wrap"
+    app:justifyContent="center">
 
     <TextView
         android:id="@+id/sel_text_three_one"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="nksdjds"
+        android:textAlignment="viewEnd"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
     <Spinner
         android:id="@+id/sel_drop_three_one"
         android:layout_width="200dp"
@@ -17,24 +23,29 @@
     <TextView
         android:id="@+id/sel_text_three_two"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     <Spinner
         android:id="@+id/sel_drop_three_two"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/sel_text_three_three"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
     <Spinner
         android:id="@+id/sel_drop_three_three"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/sel_text_three_four"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
 </com.google.android.flexbox.FlexboxLayout>
