--- a/app/src/main/res/layout/two_selector.xml
+++ b/app/src/main/res/layout/two_selector.xml
@@ -1,38 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.flexbox.FlexboxLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:flexWrap="wrap">
+    app:flexWrap="wrap"
+    app:justifyContent="center">
 
     <TextView
         android:id="@+id/sel_text_two_one"
-        android:layout_width="200dp"
-        android:layout_height="50dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     <Spinner
         android:id="@+id/sel_drop_two_one"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:spinnerMode="dropdown" />
 
     <TextView
         android:id="@+id/sel_text_two_two"
-        android:layout_width="200dp"
-        android:layout_height="50dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     <Spinner
         android:id="@+id/sel_drop_two_two"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:spinnerMode="dropdown" />
 
     <TextView
         android:id="@+id/sel_text_two_three"
-        android:layout_width="200dp"
-        android:layout_height="50dp" />
-
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
 
 </com.google.android.flexbox.FlexboxLayout>
