--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#2E2C2C"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -14,6 +15,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/username_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20px"
+                android:layout_marginTop="20px"
+                android:layout_marginRight="20px"
+                android:layout_weight="1"
+                android:textColor="#EDE5E5"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/main_userauth_button"
+                android:layout_width="127dp"
+                android:layout_height="38dp"
+                android:layout_gravity="right"
+                android:layout_marginRight="20px"
+                android:text="Sign Up" />
+        </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -41,29 +67,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
-            android:layout_marginBottom="0dp">
+            android:layout_marginBottom="0dp"
+            android:background="#2E2C2C">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+
+                app:cardBackgroundColor="#2E2C2C">
 
                 <Button
                     android:id="@+id/adding_button"
                     android:layout_width="181dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="left"
                     android:text="Add New" />
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent"
+                app:cardBackgroundColor="#2E2C2C">
 
                 <Button
                     android:id="@+id/submit_button"
                     android:layout_width="181dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
-                    android:layout_weight="1"
                     android:text="SUBMIT" />
             </androidx.cardview.widget.CardView>
 
