--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,98 +7,111 @@
     android:background="#2E2C2C"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/username_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20px"
-                android:layout_marginTop="20px"
-                android:layout_marginRight="20px"
-                android:layout_weight="1"
-                android:textColor="#EDE5E5"
-                android:textSize="20sp" />
-
-            <Button
-                android:id="@+id/main_userauth_button"
-                android:layout_width="127dp"
-                android:layout_height="38dp"
-                android:layout_gravity="right"
-                android:layout_marginRight="20px"
-                android:text="Sign Up" />
-        </LinearLayout>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            app:cardBackgroundColor="#ABB7F6">
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="I would like to know..."
-                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/selectors"
-            android:layout_width="match_parent"
-            android:layout_height="481dp">
-
-        </androidx.recyclerview.widget.RecyclerView>
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="2dp"
-            android:background="#2E2C2C">
+            android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-                app:cardBackgroundColor="#2E2C2C">
+                <TextView
+                    android:id="@+id/username_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20px"
+                    android:layout_marginTop="20px"
+                    android:layout_marginRight="20px"
+                    android:layout_weight="1"
+                    android:textColor="#EDE5E5"
+                    android:textSize="20sp" />
 
                 <Button
-                    android:id="@+id/adding_button"
-                    android:layout_width="181dp"
+                    android:id="@+id/main_userauth_button"
+                    android:layout_width="127dp"
+                    android:layout_height="38dp"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="20px"
+                    android:text="Sign Up" />
+            </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardBackgroundColor="#00FFFFFF">
+
+                <Button
+                    android:id="@+id/refresh_button"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:text="Add New" />
+                    android:text="Refresh" />
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:cardBackgroundColor="#2E2C2C">
+                android:layout_margin="10dp"
+                app:cardBackgroundColor="#ABB7F6">
 
-                <Button
-                    android:id="@+id/submit_button"
-                    android:layout_width="181dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:text="SUBMIT" />
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="I would like to know..."
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             </androidx.cardview.widget.CardView>
 
-        </LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/selectors"
+                android:layout_width="match_parent"
+                android:layout_height="481dp">
 
-    </LinearLayout>
+            </androidx.recyclerview.widget.RecyclerView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="2dp"
+                android:background="#2E2C2C">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+
+                    app:cardBackgroundColor="#2E2C2C">
+
+                    <Button
+                        android:id="@+id/adding_button"
+                        android:layout_width="181dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:text="Add New" />
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:cardBackgroundColor="#2E2C2C">
+
+                    <Button
+                        android:id="@+id/submit_button"
+                        android:layout_width="181dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:text="SUBMIT" />
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
