--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -13,5 +13,14 @@
         android:id="@+id/stats_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/stats_back_button"
+            android:layout_width="127dp"
+            android:layout_height="38dp"
+            android:layout_gravity="left"
+            android:layout_marginLeft="20px"
+            android:text="BACK" />
+    </LinearLayout>
 </ScrollView>
